discussion/kv_engine/178758/178758_rev25_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52311: [2/n] Pause / Resume Bucket: BucketManager support

Implement pause & resume commands in BucketManager.

Commands are implemented as far as the EngineIface, whose default
implementation is to return 'not_supported'. Specific engine
implemenations behave as follows:

* Default engine 'supports' pause & resume - insofar as it returns
  'success' as it has no on-disk state.

* EWouldBlock engine passes the call down to the underlying engine.

* ep-engine for now has a stub implementation which returns 'success'
  - this will be filled in in subsequent patches.

Change-Id: I53f491a21f5a1e701bafd16ea7b3dd54ab5f786c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-09-07 13:20:07.000000000
Message: 
Uploaded patch set 25.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-07 13:30:58.000000000
Message: 
Patch Set 25: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19331/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/tests/testapp/testapp_pause_resume.cc b/tests/testapp/testapp_pause_resume.cc
index 10fb84621..b23580eda 100644
--- a/tests/testapp/testapp_pause_resume.cc
+++ b/tests/testapp/testapp_pause_resume.cc
@@ -33,7 +33,9 @@ protected:
                                 std::chrono::seconds deadline) {
         // Pause is non-blocking, need to wait for it to complete.
         return cb::waitForPredicateUntil(
-                [&amp;] { return getBucketInformation(bucket)[&quot;state&quot;] == stateName; },
+                [&amp;] {
+                    return getBucketInformation(bucket)[&quot;state&quot;] == stateName;
+                },
                 deadline);
     }
 };
@@ -97,10 +99,10 @@ TEST_P(PauseResumeTest, DeleteWhenPaused) {
     mcd_env-&gt;getTestBucket().createBucket(testBucket, &quot;&quot;, *adminConnection);
 
     // Pause the bucket
-    auto rsp = adminConnection-&gt;execute(
-            BinprotPauseBucketCommand{testBucket});
+    auto rsp = adminConnection-&gt;execute(BinprotPauseBucketCommand{testBucket});
     ASSERT_EQ(cb::mcbp::Status::Success, rsp.getStatus()) &lt;&lt; rsp.getDataView();
-    EXPECT_TRUE(waitUntilBucketStateIs(testBucket, &quot;paused&quot;, std::chrono::seconds{10}))
+    EXPECT_TRUE(waitUntilBucketStateIs(
+            testBucket, &quot;paused&quot;, std::chrono::seconds{10}))
             &lt;&lt; getBucketInformation(testBucket)[&quot;state&quot;];
 
     // Delete should succeed.

EOF
</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19331/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20110/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets_test.cc:353:5: error: use of undeclared identifier "shutdown_all_engines" [clang-diagnostic-error]
    shutdown_all_engines();
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_pause_resume.cc:24:25: error: use of undeclared identifier "fmt" [clang-diagnostic-error]
        auto statName = fmt::format("bucket_details {}", bucket);
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_pause_resume.cc:35:20: error: no member named "waitForPredicateUntil" in namespace "cb" [clang-diagnostic-error]
        return cb::waitForPredicateUntil(
                   ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20110/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets_test.cc:353:5:
error: use of undeclared identifier "shutdown_all_engines" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20110/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49072/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\dcp_stream_ephemeral_test.cc(107): error C2039: "waitForPredicate": is not a member of "cb" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49072/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9908/ : FAILURE

Compile error at [2022-09-07T13:26:58.434Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_ephemeral_test.cc:107:9:
error: ?waitForPredicate? is not a member of ?cb?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9908/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9810/ : FAILURE

Compile error at [2022-09-07T13:22:43.954Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_ephemeral_test.cc:107:9:
error: no member named "waitForPredicate" in namespace "cb"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9810/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22074/ : FAILURE

Compile error at [2022-09-07T13:22:51.922Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_ephemeral_test.cc:107:9:
error: ?waitForPredicate? is not a member of ?cb?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22074/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22430/ : FAILURE

Compile error at [2022-09-07T13:26:09.846Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_ephemeral_test.cc:107:9:
error: ?waitForPredicate? is not a member of ?cb?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22430/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30466/ : FAILURE

Compile error at [2022-09-07T13:27:19.342Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_ephemeral_test.cc:107:9:
error: no member named "waitForPredicate" in namespace "cb"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30466/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23174/ : FAILURE

Compile error at [2022-09-07T13:24:04.558Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_ephemeral_test.cc:107:9:
error: no member named "waitForPredicate" in namespace "cb"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23174/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21402/ : FAILURE

Compile error at [2022-09-07T13:27:35.327Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/module_tests/dcp_stream_ephemeral_test.cc:107:9:
error: no member named "waitForPredicate" in namespace "cb"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21402/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41253/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
